--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
    "description": "Selenium framework with typescript to automate web.",
    "main": "index.js",
    "scripts": {
-      "test": "npx mocha --require 'ts-node/register' --timeout 10000 --spec 'src/specs/random_search/random_search_1.spec.ts'"
+      "serial": "bash runner-serial.bash"
    },
    "keywords": [],
    "author": "",
@@ -12,13 +12,23 @@
    "devDependencies": {
       "@types/chai": "^4.3.5",
       "@types/mocha": "^10.0.1",
+      "@types/mochawesome": "^6.2.1",
       "@types/selenium-webdriver": "^4.1.14",
+      "@types/yargs": "^17.0.24",
+      "browser-list": "^0.0.3",
       "chai": "^4.3.7",
+      "dateformat": "^5.0.3",
+      "desktop-screenshot": "^0.1.1",
+      "fs": "^0.0.1-security",
+      "imagemagick": "^0.1.3",
+      "log4js": "^6.9.1",
       "mocha": "^10.2.0",
+      "mochawesome": "^7.1.3",
       "random-test-values": "^2.0.0",
       "selenium": "^2.20.0",
       "selenium-webdriver": "^4.9.2",
       "ts-node": "^10.9.1",
-      "typescript": "^5.0.4"
+      "typescript": "^5.0.4",
+      "yargs": "^17.7.2"
    }
 }
