--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
       "log4js": "^6.9.1",
       "mocha": "^10.2.0",
       "mochawesome": "^7.1.3",
+      "node-cmd": "^5.0.0",
       "random-test-values": "^2.0.0",
       "selenium": "^2.20.0",
       "selenium-webdriver": "^4.9.2",
