--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
 
       /* Language and Environment */
       "target": "es2016",
-      "lib": ["dom", "es6"],
+      "lib": ["dom", "es6", "ES2021.String"],
       // "jsx": "preserve",                                /* Specify what JSX code is generated. */
       // "experimentalDecorators": true,                   /* Enable experimental support for legacy experimental decorators. */
       // "emitDecoratorMetadata": true,                    /* Emit design-type metadata for decorated declarations in source files. */
