--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
    "description": "Selenium framework with typescript to automate web.",
    "main": "index.js",
    "scripts": {
-      "serial": "ts-node 'selenium-runnrer-serial.ts'",
-      "parallel": "ts-node 'selenium-runnrer-parallel.ts'"
+      "serial": "ts-node 'lib/commom/selenium-runnrer-serial.ts'",
+      "parallel": "ts-node 'lib/commom/selenium-runnrer-parallel.ts'"
    },
    "keywords": [],
    "author": "",
@@ -26,6 +26,7 @@
       "mocha": "^10.2.0",
       "mochawesome": "^7.1.3",
       "node-cmd": "^5.0.0",
+      "path": "^0.12.7",
       "random-test-values": "^2.0.0",
       "selenium": "^2.20.0",
       "selenium-webdriver": "^4.9.2",
