--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
    "description": "Selenium framework with typescript to automate web.",
    "main": "index.js",
    "scripts": {
-      "serial": "ts-node 'lib/commom/selenium-runnrer-serial.ts'",
-      "parallel": "ts-node 'lib/commom/selenium-runnrer-parallel.ts'"
+      "serial": "npx browser-list && ts-node 'lib/commom/selenium-runnrer-serial.ts'",
+      "parallel": "npx browser-list && ts-node 'lib/commom/selenium-runnrer-parallel.ts'"
    },
    "keywords": [],
    "author": "",
