--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
    "description": "Selenium framework with typescript to automate web.",
    "main": "index.js",
    "scripts": {
+      "docker": "docker-compose -f 'docker-compose.yml' up",
       "serial": "npx browser-list && ts-node 'lib/commom/selenium-runnrer-serial.ts'",
       "parallel": "npx browser-list && ts-node 'lib/commom/selenium-runnrer-parallel.ts'"
    },
