--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
    "scripts": {
       "docker-up": "docker-compose -f 'docker-compose.yml' up",
       "docker-down": "docker-compose down",
-      "serial": "npx browser-list && ts-node 'lib/commom/selenium-runnrer-serial.ts'",
-      "parallel": "npx browser-list && ts-node 'lib/commom/selenium-runnrer-parallel.ts'"
+      "serial": "ts-node 'lib/commom/selenium-runnrer-serial.ts'",
+      "parallel": "ts-node 'lib/commom/selenium-runnrer-parallel.ts'"
    },
    "keywords": [],
    "author": "",
