--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
-   "name": "selenium_framework_typescript",
-   "version": "1.0.0",
-   "description": "Selenium framework with typescript to automate web.",
-   "main": "index.js",
-   "scripts": {
-      "docker-up": "docker-compose -f 'docker-compose.yml' up",
-      "docker-down": "docker-compose down",
-      "serial": "ts-node 'lib/commom/selenium-runnrer-serial.ts'",
-      "parallel": "ts-node 'lib/commom/selenium-runnrer-parallel.ts'"
-   },
-   "keywords": [],
-   "author": "",
-   "license": "ISC",
-   "devDependencies": {
-      "@types/chai": "^4.3.5",
-      "@types/mocha": "^10.0.1",
-      "@types/mochawesome": "^6.2.1",
-      "@types/selenium-webdriver": "^4.1.14",
-      "@types/yargs": "^17.0.24",
-      "browser-list": "^0.0.3",
-      "chai": "^4.3.7",
-      "dateformat": "^5.0.3",
-      "desktop-screenshot": "^0.1.1",
-      "fs": "^0.0.1-security",
-      "imagemagick": "^0.1.3",
-      "log4js": "^6.9.1",
-      "mocha": "^10.2.0",
-      "mochawesome": "^7.1.3",
-      "node-cmd": "^5.0.0",
-      "path": "^0.12.7",
-      "random-test-values": "^2.0.0",
-      "selenium": "^2.20.0",
-      "selenium-webdriver": "^4.9.2",
-      "ts-node": "^10.9.1",
-      "typescript": "^5.0.4",
-      "yargs": "^17.7.2"
-   }
+  "name": "selenium_framework_typescript",
+  "version": "1.0.0",
+  "description": "Selenium framework with typescript to automate web.",
+  "main": "index.js",
+  "scripts": {
+    "docker-clean": "docker rm $(docker ps --all -q) -f",
+    "serial": "ts-node 'lib/commom/runner/selenium-runner-serial.ts'",
+    "parallel": "ts-node 'lib/commom/runner/selenium-runner-parallel.ts'",
+    "docker": "ts-node 'lib/commom/runner/selenium-runner-docker.ts' && bash 'docker.sh'"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/chai": "^4.3.5",
+    "@types/mocha": "^10.0.1",
+    "@types/mochawesome": "^6.2.1",
+    "@types/selenium-webdriver": "^4.1.14",
+    "@types/yargs": "^17.0.24",
+    "browser-list": "^0.0.3",
+    "chai": "^4.3.7",
+    "dateformat": "^5.0.3",
+    "desktop-screenshot": "^0.1.1",
+    "fs": "^0.0.1-security",
+    "imagemagick": "^0.1.3",
+    "log4js": "^6.9.1",
+    "mocha": "^10.2.0",
+    "mochawesome": "^7.1.3",
+    "node-cmd": "^5.0.0",
+    "path": "^0.12.7",
+    "random-test-values": "^2.0.0",
+    "selenium": "^2.20.0",
+    "selenium-webdriver": "^4.9.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4",
+    "yargs": "^17.7.2"
+  }
 }
