--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "docker-clean": "docker rm $(docker ps --all -q) -f",
     "serial": "ts-node 'lib/commom/runner/selenium-runner-serial.ts' && bash 'lib/commom/runner/bash-serial.sh'",
-    "parallel": "ts-node 'lib/commom/runner/selenium-runner-parallel.ts'",
+    "parallel": "ts-node 'lib/commom/runner/selenium-runner-parallel.ts' && bash 'lib/commom/runner/bash-parallel.sh'",
     "docker": "ts-node 'lib/commom/runner/selenium-runner-docker.ts' && bash 'lib/commom/runner/bash-docker.sh'"
   },
   "keywords": [],
