--- a/package.json
+++ b/package.json
@@ -18,16 +18,12 @@
     "@types/mochawesome": "^6.2.1",
     "@types/selenium-webdriver": "^4.1.14",
     "@types/yargs": "^17.0.24",
-    "browser-list": "^0.0.3",
     "chai": "^4.3.7",
-    "dateformat": "^5.0.3",
-    "desktop-screenshot": "^0.1.1",
+    "dateformat": "4.6.3",
     "fs": "^0.0.1-security",
-    "imagemagick": "^0.1.3",
     "log4js": "^6.9.1",
     "mocha": "^10.2.0",
     "mochawesome": "^7.1.3",
-    "node-cmd": "^5.0.0",
     "path": "^0.12.7",
     "random-test-values": "^2.0.0",
     "selenium": "^2.20.0",
