--- a/package.json
+++ b/package.json
@@ -7,13 +7,8 @@
   "author": "",
   "main": "index.js",
   "scripts": {
-    "docker-clean": "docker rm $(docker ps --all -q) -f",
-    "docker-mac": "ts-node 'lib/commom/runner/selenium-runner-docker.ts' && bash 'lib/commom/runner/bash-docker.sh'",
-    "docker-win": "ts-node lib\\commom\\runner\\selenium-runner-docker.ts && bash lib\\commom\\runner\\bash-docker.sh",
-    "parallel-mac": "ts-node 'lib/commom/runner/selenium-runner-parallel.ts' && bash 'lib/commom/runner/bash-parallel.sh'",
-    "parallel-win": "ts-node lib\\commom\\runner\\selenium-runner-parallel.ts && bash lib\\commom\\runner\\bash-parallel.sh",
-    "serial-mac": "ts-node 'lib/commom/runner/selenium-runner-serial.ts' && bash 'lib/commom/runner/bash-serial.sh'",
-    "serial-win": "ts-node lib\\commom\\runner\\selenium-runner-serial.ts && bash lib\\commom\\runner\\bash-serial.sh"
+    "test": "bash 'lib/runner/runner.sh'",
+    "docker-clean": "docker rm $(docker ps --all -q) -f"
   },
   "devDependencies": {
     "@types/chai": "^4.3.5",
