added pretiier and json sort before run.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,19 @@
 {
-  "compilerOptions": {
-    "allowJs": false,
-    "baseUrl": ".",
-    "lib": [
-      "ESNext"
-    ],
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "noImplicitAny": false,
-    "noImplicitReturns": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "strict": true,
-    "target": "ESNext",
-    "typeRoots": [
-      "./node_modules/@types"
-    ],
-    "types": [
-      "mocha",
-      "node",
-      "chai"
-    ]
-  },
-  "exclude": [
-    "**/node_modules/**"
-  ],
-  "include": [
-    "**/*.ts"
-  ]
+    "compilerOptions": {
+        "allowJs": false,
+        "baseUrl": ".",
+        "lib": ["ESNext"],
+        "module": "commonjs",
+        "moduleResolution": "node",
+        "noImplicitAny": false,
+        "noImplicitReturns": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "strict": true,
+        "target": "ESNext",
+        "typeRoots": ["./node_modules/@types"],
+        "types": ["mocha", "node", "chai"]
+    },
+    "exclude": ["**/node_modules/**"],
+    "include": ["**/*.ts"]
 }
