--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "mochawesome": "^7.1.3",
         "papaparse": "^5.4.1",
         "path": "^0.12.7",
+        "prettier": "^2.8.8",
         "selenium": "^2.20.0",
         "selenium-webdriver": "^4.9.2",
         "ts-node": "^10.9.1",
