--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "chai": "^4.3.7",
         "dateformat": "4.6.3",
         "fs": "^0.0.1-security",
+        "ignore-case": "^0.1.0",
         "json-sort-cli": "^3.1.3",
         "lodash": "^4.17.21",
         "log4js": "^6.9.1",
@@ -31,6 +32,7 @@
         "selenium-webdriver": "^4.9.2",
         "ts-node": "^10.9.1",
         "typescript": "^5.0.4",
+        "xml2js": "^0.6.0",
         "yargs": "^17.7.2"
     }
 }
