--- a/package.json
+++ b/package.json
@@ -11,28 +11,28 @@
         "test": "bash 'lib/runner/runner.sh'"
     },
     "devDependencies": {
-        "@types/chai": "4.3.5",
-        "@types/mocha": "10.0.1",
-        "@types/mochawesome": "6.2.1",
-        "@types/selenium-webdriver": "4.1.15",
-        "@types/yargs": "17.0.24",
-        "chai": "4.3.7",
+        "@types/chai": "^4.3.5",
+        "@types/mocha": "^10.0.1",
+        "@types/mochawesome": "^6.2.1",
+        "@types/selenium-webdriver": "^4.1.15",
+        "@types/yargs": "^17.0.24",
+        "chai": "^4.3.7",
         "dateformat": "4.6.3",
-        "fs": "0.0.1-security",
-        "ignore-case": "0.1.0",
-        "json-sort-cli": "3.1.3",
-        "lodash": "4.17.21",
-        "log4js": "6.9.1",
-        "mocha": "10.2.0",
-        "mochawesome": "7.1.3",
-        "papaparse": "5.4.1",
-        "path": "0.12.7",
-        "prettier": "2.8.8",
-        "selenium": "2.20.0",
-        "selenium-webdriver": "4.10.0",
-        "ts-node": "10.9.1",
-        "typescript": "5.1.6",
-        "xml2js": "0.6.0",
-        "yargs": "17.7.2"
+        "fs": "^0.0.1-security",
+        "ignore-case": "^0.1.0",
+        "json-sort-cli": "^3.1.3",
+        "lodash": "^4.17.21",
+        "log4js": "^6.9.1",
+        "mocha": "^10.2.0",
+        "mochawesome": "^7.1.3",
+        "papaparse": "^5.4.1",
+        "path": "^0.12.7",
+        "prettier": "^2.8.8",
+        "selenium": "^2.20.0",
+        "selenium-webdriver": "^4.10.0",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.1.6",
+        "xml2js": "^0.6.0",
+        "yargs": "^17.7.2"
     }
 }
